--- a/1.html
+++ b/1.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">YOUR WEBSITE</div>
+            <div class="logo">
+                <span class="logo-part-1">YOUR</span><span class="logo-part-2">WEBSITE</span>
+            </div>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="about.html">About us</a></li>
@@ -25,9 +27,8 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Website Design</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget libero feugiat, faucibus libero id,
-                scelerisque quam.</p>
+            <h1>Mind Mates</h1>
+            <p>"It's okay to not be okay. Together, we'll find your way to a healthier and happier you."</p>
             <button class="cta-button">Button Name</button>
         </div>
         <div class="hero-image">
