--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="immersive/index.html">Immersive</a></li>
                 <li><a href="meditationroom/index.html">Meditation Room</a></li>
                 <li><a href="mood-tracker/frontend/index.html">mood status</a></li>
-                <li><a href="skeleton\notebook\src\components\Frontpage.js">personal</a></li>
+                <li><a href="http://localhost:3000/frontpage">personal</a></li>
                 <li><a href="static_pages/contact.html" class="get-started">HELPLINE</a></li>
             </ul>
         </nav>
