--- a/immersive/index.html
+++ b/immersive/index.html
@@ -75,7 +75,7 @@
 <a-link  href="https://www.ugaoo.com/collections/buy-plants-online-in-delhi" title="fragrant flowers"rotation="0 90 0" position="-3 1.93886 -8.5.45811" image="#portal3" scale="0.5 0.5 0.5"></a-link>
 
 <!--right side magic portals-->
-<a-link   href="https://www.bookswagon.com/#" target="_blank" title="movies" rotation="0 90 0" position="2.9 1.93886 -12.45811" image="#portal1" scale="0.5 0.5 0.5" ></a-link>
+<a-link   href="https://www.netflix.com/in/" target="_blank" title="movies" rotation="0 90 0" position="2.9 1.93886 -12.45811" image="#portal1" scale="0.5 0.5 0.5" ></a-link>
 
 <a-link  href="https://theootychocolates.com/" title="games" rotation="0 90 0" position="2.9 1.93886 -10.5.45811" image="#portal2" scale="0.5 0.5 0.5"></a-link>
 
