--- a/immersive/index.html
+++ b/immersive/index.html
@@ -77,9 +77,9 @@
 <!--right side magic portals-->
 <a-link   href="https://www.netflix.com/in/" target="_blank" title="movies" rotation="0 90 0" position="2.9 1.93886 -12.45811" image="#portal1" scale="0.5 0.5 0.5" ></a-link>
 
-<a-link  href="https://theootychocolates.com/" title="games" rotation="0 90 0" position="2.9 1.93886 -10.5.45811" image="#portal2" scale="0.5 0.5 0.5"></a-link>
+<a-link  href="https://poki.com/en/online" title="games" rotation="0 90 0" position="2.9 1.93886 -10.5.45811" image="#portal2" scale="0.5 0.5 0.5"></a-link>
 
-<a-link  href="https://www.ugaoo.com/collections/buy-plants-online-in-delhi" title="music" rotation="0 90 0" position="2.9 1.93886 -8.5.45811" image="#portal3" scale="0.5 0.5 0.5"></a-link>
+<a-link  href="https://open.spotify.com/" title="music" rotation="0 90 0" position="2.9 1.93886 -8.5.45811" image="#portal3" scale="0.5 0.5 0.5"></a-link>
 <!--api quotes-->
     <!-- Plane for displaying the quote -->
     <a-plane position="0 2.17956 -13" rotation="-90 0 0" width="4" height="2" color="#333"></a-plane>
